--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,14 @@ jobs:
 
     - name: Send JSON Data to First URL
       run: |
-       curl -X POST "https://first-api-url.com" \
+       curl -X POST "https://:Tu7MZunEQTuMYgi7mVVODQ@tandem.autodesk.com/api/v1/timeseries/models/urn:adsk.dtm:xvpy-pzCTMu5pKWs52GmLA/streams/AQAAAM0E7pLLbkDVnld_08A1cJsAAAAA" \
           -H "Content-Type: application/json" \
           -d @stream.json
 
     - name: Send JSON Data to Second URL
       run: |
-        curl -X POST "https://second-api-url.com" \
+        curl -X POST "https://:m0hcsEKxQx2_6P1b4QqBxw@tandem.autodesk.com/api/v1/timeseries/models/urn:adsk.dtm:xvpy-pzCTMu5pKWs52GmLA/streams/AQAAADsun206VU4Zo7vToEhD_o4AAAAA" \
              -H "Content-Type: application/json" \
              -d @stream.json
 
-             https://:Tu7MZunEQTuMYgi7mVVODQ@tandem.autodesk.com/api/v1/timeseries/models/urn:adsk.dtm:xvpy-pzCTMu5pKWs52GmLA/streams/AQAAAM0E7pLLbkDVnld_08A1cJsAAAAA
+             
